@@ -691,6 +691,9 @@ Release 0.8.0 - unreleased
 
   SUB TASKS
 
+    TAJO-215: Catalog should allow compatible types when finding functions.
+    (Alvin Henrick via hyunsik)
+
     TAJO-736: Add table management documentation. (hyunsik)
 
     TAJO-602: WorkerResourceManager should be broke down into 3 parts.
